--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,8 @@
     --primary-foreground: 0 0% 100%; /* #ffffff */
     --secondary: 0 0% 94%; /* #f0f0f0 */
     --secondary-foreground: 0 0% 10%; /* #1a1a1a */
-    --muted: 0 0% 95%; /* #f2f2f2 */
-    --muted-foreground: 213 23% 35%; /* #44566C */
+    --muted: 0 0% 65%; /* #A6A6A6 */
+    --muted-foreground: 249 10% 38%; /* #5B586C */
     --accent: 0 0% 97%; /* #f7f7f7 */
     --accent-foreground: 0 0% 9%; /* #171717 */
     --destructive: 0 80% 53%; /* #e03131 */
@@ -44,8 +44,8 @@
     --primary-foreground: 0 0% 96%; /* #f5f5f5 */
     --secondary: 0 0% 12%; /* #1f1f1f */
     --secondary-foreground: 0 0% 96%; /* #f5f5f5 */
-    --muted: 0 0% 16%; /* #2a2a2a */
-    --muted-foreground: 0 0% 55%; /* #8c8c8c */
+    --muted: 249 10% 38%; /* #5B586C */
+    --muted-foreground: 0 0% 65%; /* #A6A6A6 */
     --accent: 0 0% 16%; /* #2a2a2a */
     --accent-foreground: 0 0% 96%; /* #f5f5f5 */
     --destructive: 0 78% 37%; /* #9f1f1f */
